Removed unused staff to generate config for GraalVM